<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.stinkbug.MainActivity$PlaceholderFragment" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="center"
        android:src="@drawable/menu_bg" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:src="@drawable/ncsu_brick_hd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_above="@+id/bottom_bar"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:background="#80ffffff"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/optionFirst"
            style="@style/MenuTextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal|center"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick=""
            android:tag="0"
            android:text="@string/first" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#BBBBBB"
            android:orientation="vertical" >
        </LinearLayout>

        <TextView
            android:id="@+id/optionSecond"
            style="@style/MenuTextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:tag="1"
            android:text="@string/second" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#BBBBBB"
            android:orientation="vertical" >
        </LinearLayout>

        <TextView
            android:id="@+id/optionThird"
            style="@style/MenuTextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:tag="2"
            android:text="@string/third" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#BBBBBB"
            android:orientation="vertical" >
        </LinearLayout>

        <TextView
            android:id="@+id/optionFourth"
            style="@style/MenuTextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:tag="3"
            android:text="@string/fourth" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#BBBBBB"
            android:orientation="vertical" >
        </LinearLayout>

        <TextView
            android:id="@+id/optionFifth"
            style="@style/MenuTextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:tag="4"
            android:text="@string/fifth" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#BBBBBB"
            android:orientation="vertical" >
        </LinearLayout>

        <TextView
            android:id="@+id/optionSixth"
            style="@style/MenuTextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:tag="5"
            android:text="@string/sixth" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#BBBBBB"
            android:orientation="vertical" >
        </LinearLayout>

        <TextView
            android:id="@+id/optionSeventh"
            style="@style/MenuTextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:tag="6"
            android:text="@string/seventh" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#BBBBBB"
            android:orientation="vertical" >
        </LinearLayout>

        <TextView
            android:id="@+id/optionEighth"
            style="@style/MenuTextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:tag="7"
            android:text="@string/eighth" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#BBBBBB"
            android:orientation="vertical" >
        </LinearLayout>

        <TextView
            android:id="@+id/optionNinth"
            style="@style/MenuTextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:tag="8"
            android:text="@string/ninth" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="#E31835"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/bottom_text"
            android:textColor="#ffffff"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>